cos[atan(z)]=1/sqrt(1+z^2)

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -504,21 +504,20 @@ Let $a,b\in\R$.
 \begin{proof}
   \begin{enumerate}
     \item lemma: \label{ilem:YaXb_ffp}
-          $\ff(x)=ax+b$ is a \prope{differentiable function} with $\xN=0$ \prope{critical point}s
-          and $\ffp(x)=a$.
-    \item lemma: \label{ilem:YaXb_ffi}
-          The inverse of $y=\ff(x)=ax+b$ is $x=\fg_1(y)=\ffi(y)=\frac{y-b}{a}$.
+          $\ff(x)=ax+b$ is a \prope{differentiable function} and $\ffp(x)=a$.
+    \item lemma: \label{ilem:YaXb_fs}
+          The equation $y=\ff(x)=ax+b$ has $\xN=1$ solution and that solution is $x=\fs_1(y)=\frac{y-b}{a}$.
     \item It follows that
       \begin{align*}
         \ppy(y)
-          &= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ff'\brp{\fgi_n(y)}}}
+          &= \sum_{n=1}^{\xN} \frac{\ppx\brp{\fs_n(y)}}{\abs{\ff'\brp{\fs_n(y)}}}
           && \text{by \prefpp{thm:YfX}}
-        \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{\ff'\brp{\ffi(y)}}}
-          && \text{because $\xN=0$}
-        \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{a}}
+        \\&= \frac{\ppx\brp{\fs_1(y)}}{\abs{\ff'\brp{\fs_1(y)}}}
+          && \text{because $\xN=1$ \xref{ilem:YaXb_fs}}
+        \\&= \frac{\ppx\brp{\fs_1(y)}}{\abs{a}}
           && \text{by \pref{ilem:YaXb_ffp}}
         \\&= \frac{1}{\abs{a}}\ppx\brp{\frac{y-b}{a}}
-          && \text{by \pref{ilem:YaXb_ffi}}
+          && \text{by \pref{ilem:YaXb_fs}}
       \end{align*}
   \end{enumerate}
 \end{proof}
@@ -570,12 +569,13 @@ $\ppy(y)\eqd\frac{1}{2}$ for $y\in\intoc{1}{3}$ and $0$ otherwise.
 %---------------------------------------
 \corbox{
   \brb{
-    \tbox{\includegraphics{../common/math/graphics/pdfs/1_over_x.pdf}}
+    \tbox{\includegraphics{../common/math/graphics/pdfs/1_over_x.pdf}}\qquad
     \rvY=\frac{1}{\rvX}
+    \quad\rvX\neq0
     }
-  \implies
+  \quad\implies\quad
   \brb{\ppy(y) = \begin{array}{lM}
-    \frac{1}{y^2} \ppx\left( \frac{1}{y} \right) & for $y>0$
+    \frac{1}{y^2} \ppx\left( \frac{1}{y} \right) & for $y\neq0$
   \end{array}}
   }
 \end{corollary}
@@ -583,22 +583,26 @@ $\ppy(y)\eqd\frac{1}{2}$ for $y\in\intoc{1}{3}$ and $0$ otherwise.
 \begin{enumerate}
   \item lemma: \label{ilem:Yf1X_ffp}
         $\ff(x)=1/x$ is a \prope{differentiable function} in $x>0$
-        with $\xN=0$ \prope{critical point}s
         and $\ffp(x)=-1/x^2$.
   \item lemma: \label{ilem:Yf1X_ffi}
-        The inverse of $y=\fg_1(x)=\ff(x)=\frac{1}{x}$ is $x=\fgi_1(y)=\ffi(y)=\frac{1}{y}$.
+        The equation $y=\ff(x)=\frac{1}{x}$ has $\xN=1$ solution which is $x=\fs_1(y)=\frac{1}{y}$ for $y\neq0$.
   \item It follows that
     \begin{align*}
       \ppy(y)
-        &= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ff'\brp{\fgi_n(y)}}}
+        &= \sum_{n=1}^{\xN} \frac{\ppx\brp{\fs_n(y)}}{\abs{\ff'\brp{\fs_n(y)}}}
+        && \text{for $y\neq0$}
         && \text{by \prefpp{thm:YfX}}
-      \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{\ff'\brp{\ffi(y)}}}
-        && \text{because $\xN=0$}
+      \\&= \frac{\ppx\brp{\fs_1(y)}}{\abs{\ff'\brp{\fs_1(y)}}}
+        && \text{for $y\neq0$}
+        && \text{because $\xN=1$ \xref{ilem:Yf1X_ffi}}
       \\&= \frac{\ppx\brp{\frac{1}{y}}}{\abs{\ff'\brp{\frac{1}{y}}}}
+        && \text{for $y\neq0$}
         && \text{by \pref{ilem:Yf1X_ffi}}
       \\&= \frac{1}{\abs{-1/(1/y)^2}}\ppx\brp{\frac{1}{y}}
+        && \text{for $y\neq0$}
         && \text{by \pref{ilem:Yf1X_ffp}}
       \\&= \frac{1}{y^2}\ppx\brp{\frac{1}{y}}
+        && \text{for $y\neq0$}
         && \text{by definition of $\absn$}
     \end{align*}
 \end{enumerate}
@@ -620,7 +624,7 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
     \tbox{\includegraphics{../common/math/graphics/pdfs/x_squared.pdf}}
     \rvY=\rvX^2
     }
-  \implies
+  \qquad\implies\qquad
   \brb{
     \ppy(y) = \frac{1}{2\sqrt{y}} \brs{\ppx\brp{-\sqrt{y}} + \ppx\brp{\sqrt{y}}}
     \quad\text{for $y\ge0$}
@@ -631,26 +635,34 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
   \begin{enumerate}
     \item lemma: \label{ilem:YX2_ffp}
           $\ff(x)=x^2$ is a \prope{differentiable function} for $x\in\Real$
-          with $\xN=1$ \prope{critical point}s.
-    \item \label{ilem:YX2_ffi}
-          The inverse of $y=\fg_1(x)=x^2$ for $x\ge0$ is $x=\fgi_1(y)=+\sqrt{y}$ and\\
-          the inverse of $y=\fg_2(x)=x^2$ for $x<0$   is $x=\fgi_2(y)=-\sqrt{y}$.
-    \item The derivative of $\ff(x)=x^2$ is $\ff'(x)=2x$. \label{ilem:YX2_derivative}
+          and $\ffp(x)=2x$.
+    \item lemma: \label{ilem:YX2_fs}
+          The equation $y=\ff(x)=x^2$ has $\xN=2$ solutions which are
+          \\\indentx$\ds
+            x = \brbl{\begin{array}{lclM}
+                        \fs_1(y) &=& +\sqrt{y} & for $y\ge0$\\
+                        \fs_2(y) &=& -\sqrt{y} & for $y\ge0$
+                      \end{array}}$
     \item And so it follows that \ldots
       \begin{align*}
         \ppy(y)
-          &= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ff'\brp{\fgi_n(y)}}}
+          &= \sum_{n=1}^{\xN} \frac{\ppx\brp{\fs_n(y)}}{\abs{\ff'\brp{\fs_n(y)}}}
+          && \text{for $y\ge0$}
           && \text{by \prefpp{thm:YfX}}
-        \\&= \frac{\ppx\brp{\fgi_1(y)}}{\abs{\ff'\brp{\fgi_1(y)}}} +
-             \frac{\ppx\brp{\fgi_2(y)}}{\abs{\ff'\brp{\fgi_2(y)}}}
-          && \text{because $\xN=1$ \xref{ilem:YX2_ffp}}
+        \\&= \frac{\ppx\brp{\fs_1(y)}}{\abs{\ff'\brp{\fs_1(y)}}} +
+             \frac{\ppx\brp{\fs_2(y)}}{\abs{\ff'\brp{\fs_2(y)}}}
+          && \text{for $y\ge0$}
+          && \text{because $\xN=2$ \xref{ilem:YX2_fs}}
         \\&= \frac{\ppx\brp{+\sqrt{y}}}{\abs{\ff'\brp{+\sqrt{y}}}}
            + \frac{\ppx\brp{-\sqrt{y}}}{\abs{\ff'\brp{-\sqrt{y}}}}
-          && \text{by \pref{ilem:YX2_ffi}}
+          && \text{for $y\ge0$}
+          && \text{by \pref{ilem:YX2_fs}}
         \\&= \frac{\ppx\brp{+\sqrt{y}}}{\abs{2\brp{+\sqrt{y}}}}
            + \frac{\ppx\brp{-\sqrt{y}}}{\abs{2\brp{-\sqrt{y}}}}
-          && \text{by \pref{ilem:YX2_derivative}}
+          && \text{for $y\ge0$}
+          && \text{by \pref{ilem:YX2_ffp}}
         \\&= \frac{1}{2\sqrt{y}} \brs{\ppx\brp{-\sqrt{y}} + \ppx\brp{\sqrt{y}}}
+          && \text{for $y\ge0$}
           && \text{by definition of $\absn$}
       \end{align*}
   \end{enumerate}
@@ -680,18 +692,27 @@ Let $\rvZ=\tan\Theta$. Then
 \end{corollary}
 \begin{proof}
   \begin{enumerate}
-    \item lemma: The roots of $z=\tan\theta$ are $\set{\theta_n=\atan(z)+n\pi}{n\in\Z}$. \label{ilem:ppztan_roots}
-    \item lemma: The derivative of $z=\tan\theta$ is  $\ff'(\theta)=\sec^2 \theta$. \label{ilem:ppztan_derivative}
-    \item It follows that
+    \item lemma: \label{ilem:ppztan_ffp}
+          $\ff(\theta)=\tan(\theta)$ is a \prope{differentiable function} for $\theta\in\Real$
+          and $\ff'(\theta)=\sec^2(\theta)$.
+    \item lemma: \label{ilem:ppztan_fs}
+          The equation $y=\ff(x)=x^2$ has a countably infinite number of solutions $\xN$ which are the elements of the sequence
+          $\ds\seqnZ{\theta_n = \fs_n(z) = \atan(z)+n\pi}$.
+    \item And so it follows that \ldots
       \begin{align*}
         \ppz(z)
-          &= \sum_{n=1}^\xN \frac{\ppth(\theta_n)}{|\ff'(\theta_n)|}
+          &= \sum_{n\in\Z} \frac{\ppth(\theta_n)}{\abs{\ff'(\theta_n)}}
           && \text{by \prefp{thm:YfX}}
-        \\&= \sum_n \frac{\ppth(\atan(z)+n\pi)}{|\ff'(\atan(z)+n\pi)|}
-        \\&= \sum_n \frac{\ppth(\atan(z)+n\pi)}{|\sec^2(\atan(z)+n\pi)|}
-        \\&= \sum_n \cos^2(\atan(z)+n\pi)  \ppth(\atan(z)+n\pi)
-        \\&= \cos^2(\atan(z)) \sum_n  \ppth(\atan(z)+n\pi)
-        \\&= \frac{1}{1+z^2}  \sum_n \ppth(\atan(z)+n\pi)
+        \\&= \sum_{n\in\Z} \frac{\ppth(\atan(z)+n\pi)}{\abs{\ff'(\atan(z)+n\pi)}}
+          && \text{by \prefp{ilem:ppztan_fs}}
+        \\&= \sum_{n\in\Z} \frac{\ppth(\atan(z)+n\pi)}{\abs{\sec^2(\atan(z)+n\pi)}}
+          && \text{by \prefp{ilem:ppztan_ffp}}
+        \\&= \sum_{n\in\Z} \cos^2(\atan(z)+n\pi)  \ppth(\atan(z)+n\pi)
+          && \text{by definitions of $\cos(x)$ and $\sec(x)$}
+        \\&= \cos^2(\atan(z)) \sum_{n\in\Z}  \ppth(\atan(z)+n\pi)
+          && \text{by \prope{distributive} property of field $\fieldR$}
+        \\&= \frac{1}{1+z^2}  \sum_{n\in\Z} \ppth(\atan(z)+n\pi)
+          && \text{by \prefp{thm:trig_inverse}}
       \end{align*}
   \end{enumerate}
 \end{proof}
