--- a/common/math/graphics/x_squared.tex
+++ b/common/math/graphics/x_squared.tex
@@ -3,7 +3,7 @@
 % LaTeX file
 % nominal unit = 10mm
 %============================================================================
-\begin{pspicture}(-1.5,-0.5)(1.5,1.25)
+\begin{pspicture}(-1.5,-0.5)(1.5,1.5)
   %-------------------------------------
   % parameters
   %-------------------------------------
@@ -11,8 +11,8 @@
   %-------------------------------------
   % axes
   %-------------------------------------
-  \psaxes[linewidth=0.75pt,linecolor=axis,yAxis=false,ticks=all,labels=x]{<->}(0,0)(-1.5,0)(1.5,1.5)% x axis
-  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=all,labels=x]{->}(0,0)(-1.5,0)(1.5,1.5)% y axis
+  \psaxes[linewidth=0.75pt,linecolor=axis,yAxis=false,ticks=all,labels=all]{<->}(0,0)(-1.5,0)(1.5,1.5)% x axis
+  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=all,labels=all]{->}(0,0)(-1.5,0)(1.5,1.5)% y axis
   %-------------------------------------
   % function plot
   %-------------------------------------
