unit circle with x,y,r

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -396,8 +396,8 @@ Let $\ff(x)$ be a \structe{differentiable function} in $\clFrr$.
   \citerppgc{papoulis1984}{95}{96}{0070484686}{``Fundamental Theorem"},
   \citerpgc{papoulis1990}{157}{0137116985}{``Fundamental Theorem"},
   \citerp{papoulis}{93},
-  \citerpgc{haykin1994}{235}{239}{0471571768}{\textsection ``{\scshape 4.5 Transformations of Random Variables}"},
-  \citerp{proakis}{30},
+  \citerppgc{haykin1994}{235}{239}{0471571768}{\textsection ``{\scshape 4.5 Transformations of Random Variables}"},
+  \citerp{proakis}{30}
   }
 \label{thm:YfX}
 %---------------------------------------
@@ -419,12 +419,12 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-  \item \label{item:YfX_gn}
-        The problem with a function $\ff(x)$ with at least $\xN=1$ critical point is that
-        $\ffi(y)$ is \prope{not invertible}.
-        That is,
-        $\ffi(y)$ has more than one solution (and thus the \structe{relation} $\ffi(y)$ is not a \structe{function}).
-        However, note that in each partition $\setA_n$, $\ff(x)$ is \prope{invertible} and thus
+  \item \label{item:YfX_N}
+        Note that while a function $\ff(x)$ always has an \structe{inverse relation} $\ff^{-1}(x)$, 
+        this relation is not always a \structe{function}. 
+        That is, a function $\ff(x)$ may have more than one solution $\xN$.
+        Let $\xN$ be the number of solutions of a function $\ff(x)$.
+  \item However, note that Note further that in each partition $\setA_n$, $\ff(x)$ is \prope{invertible} and thus
         $\ffi(y)$ in that partition has a \prope{unique} solution.
         Thus, each $\fg_n(x)$ \emph{is} \prop{invertible} in it's domain (and each $\fgi_n(y)$ exists as a function).
 
