unitcircle rework using uput instead of approximation of 1/sqrt(2)

--- a/common/math/graphics/unitcircle.tex
+++ b/common/math/graphics/unitcircle.tex
@@ -8,8 +8,9 @@
   %-------------------------------------
   % nodes
   %-------------------------------------
-  \pnode(0,0){origin}%          z-plane origin
-  \pnode(0.707,0.707){circleP}% circle point
+  \pnode(0,0){origin}% z-plane origin
+  \uput{1.000000}[45](origin){\pnode(0,0){circleP}}% point on circle to point to
+  \pnode(1.8,1.5){circleEqu}% circle equation
   %-------------------------------------
   % axes
   %-------------------------------------
@@ -23,7 +24,7 @@
   %-------------------------------------
   \uput{1.3}[0](origin){\color{axis}$\scy\Reb{z}$}%
   \uput{1.3}[90](origin){\color{axis}$\scy\Imb{z}$}%
-  \rput[tr](1.8,1.5){\rnode[b]{circleL}{$z=e^{i\omega}$}}% circle label
+  \rput[tr](circleEqu){\rnode[b]{circleL}{$z=e^{i\omega}$}}% circle label
   %-------------------------------------
   % pointer lines
   %-------------------------------------
