no more displayed reference to critical point in RandVar chapter

--- a/common/harTrig.tex
+++ b/common/harTrig.tex
@@ -1768,7 +1768,7 @@ $\\
 %\end{proof}
 
 %=======================================
-\section{Inverse Trigonometric Functions}
+\section{Composite Trigonometric Functions}
 %=======================================
 %--------------------------------------
 \begin{theorem}
@@ -1781,10 +1781,16 @@ $\\
 \begin{proof}
 \begin{enumerate}
   \item  \label{item:trig_inverse_xyr}
-        Let $x$ be the adjacent side length, $y$ the opposite side length, $r$ the hypotenuse length,
-        and $\theta$ the angle between side $r$ and side $x$
-        of a right triangle.
-        \\\tbox{\includegraphics{../common/math/graphics/pdfs/unitcircle_xyr.pdf}}
+        \begin{tabular}[t]{lc}
+          \begin{tabular}{l}
+            Let $x$ be the adjacent side length,
+            \\$y$ the opposite side length,
+            \\$r$ the hypotenuse length, and
+            \\$\theta$ the angle between side $r$ and side $x$ of a right triangle.
+          \end{tabular}%
+          &
+          \tbox{\includegraphics{../common/math/graphics/pdfs/unitcircle_xyr.pdf}}
+        \end{tabular}
 
   \item Let $z\eqd\frac{y}{x}$. \label{item:trig_inverse_z}
   \item It then follows that \ldots
