Normal distribution graphics

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -858,6 +858,17 @@
   urla         = {http://www.amazon.com/dp/0023535717},
   }
 
+@techreport{hernandez2016,
+  author       = {Hugo Hernandez},
+  title        = {Modelling the effect of fluctuation in nonlinear systems using variance algebra - Application to light scattering of ideal gases},
+  number       = {FRR 2016-1},
+  url          = {https://www.researchgate.net/publication/311424052},
+  year         = {2016},
+  month        = {December},
+  doi          = {10.13140/RG.2.2.36501.52969},
+  institution  = {ForsChem Research},
+  }
+
 @article{hoeffding1963,
   author       = {Wassily Hoeffding},
   year         = {1963},
