--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -38,9 +38,9 @@ of the \ope{expectation operator} $\pE$.
 Let $\ps$ be a \structe{probability space} \xref{def:ps} and
 $\rvX$ a \fncte{random variable} \xref{def:rv} on $\ps$ with
 \fncte{probability density function} $\ppx$.
-\defboxt{ 
+\defboxt{
   The \opd{expectation operator} $\pEx$ on $\rvX$ is defined as
-  \\\indentx$\ds\pEx\rvX \eqd \int_{x\in\F} x \ppx(x) \dx$. 
+  \\\indentx$\ds\pEx\rvX \eqd \int_{x\in\F} x \ppx(x) \dx$.
 }
 \end{definition}
 
@@ -67,10 +67,10 @@ variance is an indicator of the ``spread".
 %---------------------------------------
 Let $\rvX$ be a \fncte{random variable} on the \structe{probability space} $\ps$.
 \defbox{\begin{array}{FM>{\ds}rc>{\ds}l}
-  (1).&The \fnctd{mean} $\pmeanx$ of $\rvX$ is 
-      & \pmeanx  &\eqd& \pEx\rvX 
+  (1).&The \fnctd{mean} $\pmeanx$ of $\rvX$ is
+      & \pmeanx  &\eqd& \pEx\rvX
   \\
-  (2).&The \fnctd{variance} $\pVar(\rvX)$ or $\pvarx$ of $\rvX$ is 
+  (2).&The \fnctd{variance} $\pVar(\rvX)$ or $\pvarx$ of $\rvX$ is
       & \pVar(\rvX) &\eqd& \pEx\left[(\rvX-\pEx\rvX)^2 \right]
 \end{array}}
 \end{definition}
@@ -78,18 +78,19 @@ Let $\rvX$ be a \fncte{random variable} on the \structe{probability space} $\ps$
 %=======================================
 \section{Expectation as a linear operator}
 %=======================================
-The next theorem demonstrates that the operator $\pE$ is a 
+The next theorem demonstrates that the operator $\pE$ is a
 \ope{linear operator} \xref{def:linop}---which in turn
 makes $\pE$ part of a distinguished club of operators along with fellow member operators
 differentiation $\opDif$, integration $\int\dx$,
 Laplace $\opLT$, Fourier $\opFT$, z-transform $\opZ$, etc.
-Because $\pE$ is a linear operator, it immediately inherits all the properties 
-that it's linear operator birthright grants it \xref{cor:pE_linop}. 
+Because $\pE$ is a linear operator, it immediately inherits all the properties
+that it's linear operator birthright grants it \xref{cor:pE_linop}.
 %---------------------------------------
 \begin{theorem}[\thmd{Linearity of $\pE$}]
 \footnote{
   \citerpgc{haykin2014}{107}{9781118476772}{``{\scshape Property} 1 Linearity"},
-  \citerpc{wilks1963}{73}{\textsection 3.2 ``Mean value of a random variable"}
+  \citerpc{wilks1963}{73}{\textsection 3.2 ``Mean value of a random variable"},
+  \citerp{hernandez2016}{3}
   }
 \label{thm:pE}
 \label{thm:pE_linop}
@@ -134,8 +135,8 @@ Let $\spLLF$ be a \structe{vector space of random variables} over $\ps$.
     \\(3). & \pE(\rvX-\rvY) &=& \pE\rvX - \pE\rvY  & \forall \rvX,\rvY\in\spLLF & and
   \end{array}
   \begin{array}{F>{\ds}lc>{\ds}lCC}
-      (4). & \pE\brp{\sum_{n=1}^\xN \alpha_n\rvX_n}  
-           &=& \sum_{n=1}^\xN \alpha_n\brp{\pE\rvX_n} 
+      (4). & \pE\brp{\sum_{n=1}^\xN \alpha_n\rvX_n}
+           &=& \sum_{n=1}^\xN \alpha_n\brp{\pE\rvX_n}
            &   \forall \alpha_n\in\F,
            &   \forall\rvX\in\spLLF
   \end{array}
@@ -149,24 +150,24 @@ and from properties of all linear operators \xref{thm:L_prop}.
 %---------------------------------------
 \begin{remark}
 %---------------------------------------
-Projecting a stochastic process onto a basis often yields valuable insights 
-into the nature of the underlying data. 
+Projecting a stochastic process onto a basis often yields valuable insights
+into the nature of the underlying data.
 Typical projection operators include the Fourier operator $\opFT$, Laplace $\opLT$,
 and z-transform $\opZT$ \ldots not to mention wavelet operators.
 But note that any such projection on a random sequence simply produces another random sequence.
-For example, the Fourier transform $\opFT\rvx(n)$ of a random sequence $\rvx(n)$ is another random 
+For example, the Fourier transform $\opFT\rvx(n)$ of a random sequence $\rvx(n)$ is another random
 sequence.
 
 One way to overcome this difficulty is to simply invoke a \ope{sampling} operator $\opS\rvx(n)$\ifsxref{sampling}{chp:sampling},
-yielding a deterministic sequence, and then take the Fourier transform of the resulting 
-deterministic sequence. 
-The problem here is that every time you resample the sequence, you will very likely get a 
+yielding a deterministic sequence, and then take the Fourier transform of the resulting
+deterministic sequence.
+The problem here is that every time you resample the sequence, you will very likely get a
 different Fourier transform.
 
-Arguably a better approach (and the standard one at that) 
+Arguably a better approach (and the standard one at that)
 is to first invoke the expectation operator $\pE\rvx(n)$, also yielding a deterministic sequence.
 
-The good news here is that because $\pE$ and all the above mentioned operators are \prope{linear}, 
+The good news here is that because $\pE$ and all the above mentioned operators are \prope{linear},
 we can do all the standard arithmetic acrobatics associated with linear algebra operators (next corollary).
 %such as $\opE\opFT\rvx(n)
 \end{remark}
@@ -190,12 +191,15 @@ and from properities of all linear operators \xref{thm:L_LMN}.
 
 %---------------------------------------
 \begin{corollary}
+\footnote{
+  \citerp{hernandez2016}{4}
+  }
 \label{cor:pVar}
 %---------------------------------------
 Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
-\corbox{\begin{array}{>{\ds}rc>{\ds}lCD}
-    \pVar(a\rvX+b)     &=& a^2\pVar(\rvX)                       & \forall a,b  \in\R &
-  \\\pVar(\rvX)        &=& \pEx(\rvX^2) - (\pEx\rvX)^2          &                    &
+\corbox{\begin{array}{>{\ds}rc>{\ds}lC}
+    \pVar(\psdev\rvX+b) &=& \psdev^2\pVar(\rvX)           & \forall \psdev,b  \in\R
+  \\\pVar(\rvX)         &=& \pEx(\rvX^2) - (\pEx\rvX)^2   &
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -213,14 +217,14 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
   \\&=    \pEx\rvX^2 - 2(\pEx\rvX)[\pEx\rvX] + (\pEx\rvX)^2
   \\&=    \pEx(\rvX^2) - (\pEx\rvX)^2
 \\
-  \pVar(a\rvX+b)
-    &=    \pEx(a\rvX+b)^2  - [\pEx(a\rvX+b)]^2
-  \\&=    \pEx(a^2\rvX^2+2ab\rvX+b^2)  - [a(\pEx\rvX)+b]^2
-  \\&=    a^2 \pEx\rvX^2  +2ab\pEx\rvX + b^2 - \brs{a^2[\pEx\rvX]^2 + 2ab\pEx\rvX + b^2}
+  \pVar(\psdev\rvX+b)
+    &=    \pEx(\psdev\rvX+b)^2  - [\pEx(\psdev\rvX+b)]^2
+  \\&=    \pEx(\psdev^2\rvX^2+2\psdev b\rvX+b^2)  - [\psdev(\pEx\rvX)+b]^2
+  \\&=    \psdev^2 \pEx\rvX^2  +2\psdev b\pEx\rvX + b^2 - \brs{\psdev^2[\pEx\rvX]^2 + 2\psdev b\pEx\rvX + b^2}
     &&    \text{by \prope{linearity} of $\pE$}
     &&    \text{\xref{thm:pE_linop}}
-  \\&=    a^2\brs{ \pEx\rvX^2  - (\pEx\rvX)^2 }
-  \\&\eqd a^2 \pVar(\rvX)
+  \\&=    \psdev^2\brs{ \pEx\rvX^2  - (\pEx\rvX)^2 }
+  \\&\eqd \psdev^2 \pVar(\rvX)
     &&    \text{by previous result}
 \end{align*}
 \end{proof}
@@ -238,8 +242,6 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
   \pE\brs{\fg(\rvX)} = \int_{x\in\R} \fg(x) \pdfx(x) \dx
   }
 \end{theorem}
-
-
 
 %=======================================
 \section{Expectation inner product space}
@@ -416,8 +418,8 @@ and illustrated in \prefpp{fig:jensen}.
 %--------------------------------------
 Let $\ff$ be a function in $\clFrr$ and $\rvX$ be a \fncte{random variable} on $\ps$.
 \corbox{
-  \brb{\text{$\ff$ is \prope{convex}}} 
-  \quad\implies\quad 
+  \brb{\text{$\ff$ is \prope{convex}}}
+  \quad\implies\quad
   \brb{\ff(\pE\rvX) \le \pE\ff(\rvX)}
   }
 \end{corollary}
@@ -514,7 +516,7 @@ Let $\rvX$ be a \fncte{random variable} with mean $\mu$ and variance $\sigma^2$.
 \begin{align*}
   \psp\setn{\abs{\rvX-\mu} \ge a}
     &=   \psp\setn{ (\rvX-\mu)^2 \ge a^2}
-  \\&\le \frac{1}{a^2} \pE(\rvX-\mu)^2 
+  \\&\le \frac{1}{a^2} \pE(\rvX-\mu)^2
     && \text{by \thme{Markov's inequality}}
     && \text{\xref{thm:markovineq}}
   \\&=   \frac{\sigma^2}{a^2}
@@ -608,7 +610,7 @@ Let $\ps$ be a \structe{probability space} with \ope{expectation} functional $\p
 \begin{enumerate}
   \item $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}. Proof: \prefpp{thm:prb_vspace}.
 
-  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the 
+  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the
         \ineqe{Generalized triangle inequality} follows \xref{thm:norm_tri}.
 \end{enumerate}
 \end{proof}
@@ -628,7 +630,7 @@ Let $\ps$ be a \structe{probability space} with \ope{expectation} functional $\p
 \begin{enumerate}
   \item $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}. Proof: \prefpp{thm:prb_vspace}.
 
-  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the \ineqe{Cauchy-Schwartz inequality} 
+  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the \ineqe{Cauchy-Schwartz inequality}
         follows \xref{thm:cs}.
 \end{enumerate}
 \end{proof}
@@ -638,9 +640,9 @@ Let $\ps$ be a \structe{probability space} with \ope{expectation} functional $\p
 %=======================================
 Sometimes the problem of finding the expected value of a \fncte{random variable} $\rvX$
 can be simplified by ``conditioning $\rvX$ on $\rvY$".
-It has already been pointed out in \prefpp{sec:pE_defs} 
+It has already been pointed out in \prefpp{sec:pE_defs}
 that the expected value $\pEx\rvX$  of $\rvX$ is \textbf{not random}.
-On the other hand, 
+On the other hand,
 note that $\pE(\rvX|\rvY)$ \textbf{is random}.
 This is because $\pE(\rvX|\rvY)$ is a function of $\rvY$.
 That is, once we know that $\rvY$ equals some fixed value $y$
