--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1666,6 +1666,7 @@
  \newcommand{\pmeany}[0]   {{\pmeanx[Y]}}
  \newcommand{\pVar}        {{\mathfnct{V\!a\!r}}}
  \newcommand{\pCov}        {{\mathfnct{C\!o\!v}}}
+ \newcommand{\psdev} [0]   {{\sigma}}
  \newcommand{\pvar}  [0]   {{\sigma^2}}
  \newcommand{\pvarx} [1][X]{{\sigma^2_{\mathsfup{#1}}}}
  \newcommand{\pvary} [0]   {{\pvarx[Y]}}
@@ -1717,6 +1718,7 @@
 \newcommand{\rvs}[0]{\mathfnct{s}}%{\mbfs}
 \newcommand{\rvt}[0]{\mbftheta}
 \newcommand{\rvW}[0]{\mathfnct{W}}
+\newcommand{\rvR}[0]{\mathfnct{R}}
 \newcommand{\rvX}[0]{\mathfnct{X}}
 \newcommand{\rvY}[0]{\mathfnct{Y}}
 \newcommand{\rvZ}[0]{\mathfnct{Z}}
